--- a/table1.html
+++ b/table1.html
@@ -1,30 +1,36 @@
 <html>
-<script src = "https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
-</script>
-<body>
-<table>
-<tr>
-<th>Name</th>
-<th>Location</th>
-</tr>
-<tbody id = "myTable">
-</tbody>
-</table>
-<script>
-var arr = [{'Name' : 'KSP' , 'Location' : 'Khammam'},
-	{'Name' : 'Ramu' , 'Location' : 'Hyderabad'}]
+    <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+        th, td {
+          padding: 5px;
+        }
+    </style>
+    <table border ="1" align = "center" >
+        <tr>
+            <th>Name</th>
+            <th>Location</th>
+        </tr>
+        <tbody id = "myTable">
+        </tbody>
+    </table>
 
-buildTable(arr)
-function buildTable(data){
-var table = document.getElementById('myTable');
-for (var i=0;i<data.length;i++){
-var row = <tr>
-<td>${data[i].Name}</td>
-<td>${data[i].Location}</td>
-</tr>
-table.innerHTML += row
-}
-}
-</script>
-</body>
+
+    <script>
+        var arr = [{'Name' : 'KSP' , 'Location' : 'Khammam'},
+                    {'Name' : 'Ramu' , 'Location' : 'Hyderabad'},]
+
+        buildTable(arr)
+        function buildTable(data){
+            var table = document.getElementById("myTable");
+            for (var i=0;i<data.length;i++){
+                var row =  `<tr>
+                                <td>${data[i].Name}</td>
+                                <td>${data[i].Location}</td>
+                            </tr>`
+                table.innerHTML += row
+            }
+        }
+    </script>
 </html>
